3.3.2

 * fix: -lua parameter;
 * fix: WM minimized state fix;
 * fix: loadstring sandboxed;
 * new: initial gamepad support;
 * new: utf8 tiny library;
 * enh: stead3 debugger uses native text input;
 * enh: doc fixes;

 -- Peter Kosyh <p.kosyh@gmail.com>  Tue, 11 Feb 2020 08:10:00 +0300

3.3.1

 * fix: build with SDL 2.0.10;
 * enh: discord bot can be sticked to channel(s);
 * enh: english doc fixes;

 -- Peter Kosyh <p.kosyh@gmail.com>  Fri, 4 Oct 2019 18:21:00 +0300

3.3.0

  * new: input:text() event;
  * new: tiny instead for metaparser;
  * new: telegram, vk and discord bots;
  * enh: english documentation;
  * enh: Android port;
  * fix: list:add() and order;
  * fix: some compilation warnings;
  * fix: makefile and source code cleanups;
  * fix: possible segfault;
  * fix: do not eat keyboard input;

 -- Peter Kosyh <p.kosyh@gmail.com>  Fri, 8 Mar 2019 09:28:00 +0300

3.2.2

  * new: mobile theme;
  * new: -lang parameter;
  * new: -notheme parameter;
  * new: instead.screen_size();
  * enh: themes cleanups;
  * new: cmake and LuaJIT build (-DWITH_LUAJIT=1);
  * enh: autosave in emscripten build;
  * enh: load status in emscripten build;
  * new: machine-translated English manual;
  * fix: Lua5.3 compatibility;
  * fix: ini method and load parameter;
  * fix: -appdata and system build;
  * fix: build with zlib;
  * fix: std.fmt and substitutions ($);
  * fix: segfault on restart;
  * fix: build with old gcc;

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 1 Sep 2018 09:21:00 +0300

3.2.1

  * fix: save in lua 5.2 (proxy objects);
  * new: {$fmt ... } substitution;
  * fix: instead.set_sound() and snd.play();
  * fix: direct mode fix;
  * fix: bugs in documentation.
  * new: project moved to https://instead-hub.github.io

 -- Peter Kosyh <p.kosyh@gmail.com>  Sun, 22 Apr 2018 13:34:00 +0300

3.2.0

  * fix: segfault on path overflow fix;
  * fix: segfault in std.readdir fix;
  * fix: forever loop bug (unpaired {});
  * fix: theme.restore();